Development
    Prefer the dark theme when running on gnome 3.2, similar to totem
    Updated Polish translation to match the reworded source text
    Reword 50% larger as gettext is stupid about the % sign
    Translated the missing string into Polish
1.0.5b2
    Add 150% display of video
    Use icon named gnome-mplayer-panel for status icon if present in theme
    Remove configure option --with-gpm-new-method as this is default now
        if you have an old gnome-power-manager < 2.26 add the configure flag
        --with-gpm-old-method
    Try to detect the right screensaver api to use in Gnome 3.2 (Fedora 16)
    Updated German translation
    Fix warning when accelerator keys have not been set
    Updated Japanese translation
    Fix the speed multipliers and speed reset Issue 566 & 567
1.0.5b1
    Rephrased some strings in Polish translation
    Updated Portuguese translation
    Updated Polish translation
    Fix problem with visual seeking while using the tracker, requires gmtk svn r48 
    Add in command line option --vo (this disables hardware codecs as a safety measure)
    Add in command line option --dvd_device
    Fix Issue #560, ATTRIBUTE_FORCE_CACHE not being processed
    Printout gmtk version in verbose mode
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Make cursor reappear when not in fullscreen mode
    Hide mouse/panel in fullscreen mode when mouse is above the panel area.
    Only make the fullscreen controls reappear when the mouse is at the bottom of the screen
    Fix keyboard shortcut capture to only detect CTRL, ALT or SHIFT modifiers
    Set CDDB to TYPE CD
    Fix typo on keyscreen
    Add tooltop for "Enable Video Hardware"
    Remove fuzzy and obsolete translations from po files
    Make Normal and Double size hotkeys work
    Fix saving and loading of preferred VO
    Fix 'f' not going to/returning from fullscreen
    Remove the use of mplayer profiles, as they are no longer needed