@@ -658,6 +658,7 @@ int main(int argc, char *argv[])
     gdouble volume = 100.0;
     gchar *accelerator_keys;
     gchar **parse;
+	GtkSettings *gtk_settings;
 
 #ifndef OS_WIN32
     struct sigaction sa;
@@ -1051,9 +1052,11 @@ int main(int argc, char *argv[])
                            G_TYPE_STRING, G_TYPE_INT, G_TYPE_INT, G_TYPE_INT, G_TYPE_INT,
                            G_TYPE_FLOAT, G_TYPE_FLOAT, G_TYPE_BOOLEAN);
 
-	GtkSettings *gtk_settings;
-	gtk_settings = gtk_settings_get_default ();
-	g_object_set (G_OBJECT (gtk_settings), "gtk-application-prefer-dark-theme", TRUE, NULL);
+	// only use dark theme if not embedded, otherwise use the default theme                                       
+	if (embed_window <= 0) {
+		gtk_settings = gtk_settings_get_default ();
+		g_object_set (G_OBJECT (gtk_settings), "gtk-application-prefer-dark-theme", TRUE, NULL);
+	}
 
     create_window(embed_window);
 
